--- a/.github/workflows/sample-action.yml
+++ b/.github/workflows/sample-action.yml
@@ -3,3 +3,6 @@ on: push
 jobs:
   line-counter:
     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4.1.1
