--- a/.github/workflows/sample-action.yml
+++ b/.github/workflows/sample-action.yml
@@ -2,7 +2,10 @@ name: line-counter
 on: push
 jobs:
   line-counter:
+    name: line-counter-job
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4.1.1
+      - name: Line counter operation
+        run: chmod +x ./script/line-counter.sh && ./script/line-counter.sh
