--- a/.github/workflows/sample-action.yml
+++ b/.github/workflows/sample-action.yml
@@ -9,3 +9,8 @@ jobs:
         uses: actions/checkout@v4.1.1
       - name: Line counter operation
         run: chmod +x ./script/line-counter.sh && ./script/line-counter.sh
+      - name: Commit 
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          file_pattern: "README.md"
+          commit_message: Updated report with line counter
